# crobots-plus-plus

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_linux.sh  download.sh  linux.sh  run_linux.sh
.github/workflows/: cmake-multi-platform.yml
cmake/: AddModel.cmake  AddShader.cmake  AddVoxModel.cmake
include/Crobots++/: ClientLog.hpp  Crobots++.hpp  IRobot.hpp  InternalRobotProxy.hpp  Log.hpp
lib/: CMakeLists.txt
lib/SDLx_gpu/: CMakeLists.txt
lib/SDLx_gpu/include/SDLx_gpu/: SDL_gpu.h
lib/SDLx_gpu/shaders/: line_2d.frag  line_2d.vert  line_3d.vert  shader.hlsl  text_2d.frag  text_2d.vert  text_3d.vert  vox_obj.frag  vox_raw.frag  vox_raw.vert
lib/SDLx_gpu/src/: SDL_gpu.cpp
lib/SDLx_model/: .gitmodules  CMakeLists.txt
lib/SDLx_model/include/SDLx_model/: SDL_model.h
lib/SDLx_model/src/: SDL_model.cpp  internal.cpp  internal.hpp  vox_obj.cpp  vox_raw.cpp
lib/json/: CMakeLists.txt
lib/stb/: CMakeLists.txt
models/: default.mtl  default.vox
robots/: Doofus.cpp  Dummy.cpp
shaders/: ModelVoxObj.frag  ModelVoxObj.vert  Particle.comp  Particle.frag  Particle.vert
src/: Api.hpp  App.cpp  App.hpp  Arena.cpp  Arena.hpp  Assert.hpp  Camera.cpp  Camera.hpp  DebugGroup.cpp  DebugGroup.hpp  Engine.cpp  Engine.hpp  IRobot.cpp  InternalRobotProxy.cpp  Loader.cpp  Loader.hpp  Log.cpp  Log.hpp  Main.cpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ModelVoxObj.cpp  ModelVoxObj.hpp  ParticleBuffer.cpp  ParticleBuffer.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderConfig.h  Shot.cpp  Shot.hpp  Texture.cpp  Texture.hpp  (+6 more)
test/: CMakeLists.txt  test_hello.cpp
